--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "primeicons": "^6.0.1",
     "primevue": "^3.49.0",
     "vue": "^3.4.19",
-    "vue-router": "^4.3.0"
+    "vue-router": "^4.3.0",
+    "zod": "^3.22.4",
+    "zod-validation-error": "^3.0.2"
   },
   "devDependencies": {
     "@nuxtjs/i18n": "^8.1.1",
